保姆列表页

--- a/src/view/list.html
+++ b/src/view/list.html
@@ -9,7 +9,7 @@
   <div class="search-wrapper search-type-two search-type-three">
     <div class="search-container">
       <a href="./index.html" class="back back-two"></a>
-      <input type="text" class="search input-search" placeholder="搜索商家、服务" >
+      <input type="text" class="search input-search input-search-list" placeholder="搜索商家、服务" >
       <a href="javascript:void(0);" class="cancle cancle-list" id="cancle">取消</a>
     </div>
   </div>
