--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-20 22:57:31
+* @Last Modified time: 2017-11-23 20:10:16
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -26,6 +26,28 @@ input {
 }
 a:hover, a:focus, a:active {
   text-decoration: none;
+}
+.grey-btn {
+  color: #fff;
+  padding: 6px 25px;
+  background-color: #999;
+  border: none;
+  font-size: 1.2em;
+  &:hover, &:focus, &:active {
+    color: #fff;
+    background-color: #999;
+  }
+}
+.green-btn {
+  color: #fff;
+  padding: 6px 25px;
+  border: none;
+  background-color: $green;
+  font-size: 1.2em;
+  &:hover, &:focus, &:active {
+    color: #fff;
+    background-color: $green;
+  }
 }
 
 .text-green {
@@ -799,21 +821,59 @@ a:hover, a:focus, a:active {
     display: none;
   }
   .choose-type {
-    display: block;
+    max-height: calc(100vh - 182px);
+    overflow-y: auto;
+    .boxes {
+      padding: 0 10px;
+    }
+    .title {
+      line-height: 2;
+      padding: 10px 15px 0px;
+      margin: 0;
+      font-size: 1.2em;
+    }
+    .item-sort {
+      padding: 0 5px;
+      margin-top: 10px;
+      &.green-active {
+        .box {
+          background-color: $green;
+          color: #fff;
+        }
+      }
+      .box {
+        font-size: 1em;
+        display: block;
+        color: #333;
+        background-color: #fff;
+        padding: 5px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        line-height: 1.3;
+      }
+    }
+    .sort-submit-wrap {
+      border-top: 1px solid #ccc;
+      padding: 5px 0;
+      background-color: #f6f6f6;
+    }
+    .info {
+      padding-bottom: 10px;
+    }
   }
   .search-wrapper {
     height: auto;
     line-height: 1.2;
   }
   .shadow-wrap {
-    display: -none;
+    display: none;
     position: absolute;
     top: 45px;
     left: 0;
     right: 0;
     z-index: 25;
     width: 100%;
-    height: calc(100vh - 186px);
+    height: calc(100vh - 185px);
     background-color: rgba(0, 0, 0, .4);
     .type-wrap {
       max-height: calc(100vh - 186px);
@@ -838,6 +898,8 @@ a:hover, a:focus, a:active {
     }
   }
 }
+
+
 @media (max-width: 375px) {
 
 }
