--- a/src/view/layout/sort.html
+++ b/src/view/layout/sort.html
@@ -15,6 +15,9 @@
   </div>
   <div class="type-list clearfix">
     <span class="type-small-box small-box pull-left">8001-10000元<i class="icon"></i></span>
+    <span class="type-small-box small-box pull-left">8001-10000元<i class="icon"></i></span>
+    <span class="type-small-box small-box pull-left">8001-10000元<i class="icon"></i></span>
+    <span class="type-small-box small-box pull-left">8001-10000元<i class="icon"></i></span>
   </div>
   <div class="shadow-wrap">
     <div class="type-wrap sort-type">
@@ -54,26 +57,53 @@
       <div class="info">
         <p class="title">热门搜索</p>
         <div class="boxes clearfix">
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">保姆</span>
           </a>
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">月嫂</span>
           </a>
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">烧饭阿姨</span>
           </a>
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">保姆</span>
           </a>
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">月嫂</span>
           </a>
-          <a href="#" class="col-xs-4 item">
+          <a href="#" class="col-xs-4 item-sort">
             <span class="text-center box text-overflow">烧饭阿姨</span>
           </a>
         </div>
-    </div>
+      </div>
+      <div class="info">
+        <p class="title">热门搜索1</p>
+        <div class="boxes clearfix">
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">保姆</span>
+          </a>
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">月嫂</span>
+          </a>
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">烧饭阿姨</span>
+          </a>
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">保姆</span>
+          </a>
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">月嫂</span>
+          </a>
+          <a href="#" class="col-xs-4 item-sort">
+            <span class="text-center box text-overflow">烧饭阿姨</span>
+          </a>
+        </div>
+      </div>
+      <div class="sort-submit-wrap text-center">
+        <div class="btn btn-default btn-list-cancle grey-btn">取消</div>
+        <div class="btn btn-default btn-list-ok green-btn">确定</div>
+      </div>
     </div>
   </div>
 </div>
