--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-24 17:21:09
+* @Last Modified time: 2017-11-24 23:10:12
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -946,22 +946,191 @@ a:hover, a:focus, a:active {
         margin:0 10px 0 5px;
       }
       .focus {
-        background-color: #f00;
+        background: transparent url('../../image/icon6.png') center -485px no-repeat;
         position: absolute;
         width: 40px;
         height: 20px;
         padding-top: 40px;
-        top: 50%;
+        top: 0;
         right: 10px;
         margin-left: -20px;
-        margin-top: -30px;
         color: #333;
+        &.success-green {
+          background-position: center -446px;
+          color: $green;
+        }
       }
     }
   }
   .desc {
     margin: 10px 0 0;
     font-size: 1.1em;
+  }
+}
+
+// 保姆详情页
+.detail-wrap {
+  .base {
+    margin-top: 10px;
+    padding: 10px 0 0;
+    font-size: 1.1em;
+    background-color: #fff;
+  }
+  .top {
+
+  }
+  .content-wrap {
+    padding: 10px 15px;
+    font-size: 1em;
+  }
+  .title {
+    padding-left: 15px;
+    font-size: 1.2em;
+    font-weight: 700;
+  }
+  .base-info {
+   
+  }
+  .job {
+    .job-wrap {
+      .item {
+        background: #fff url('../../image/icon6.png') 0px -924px no-repeat;
+        padding-left: 30px;
+      }
+    }
+  }
+  .server {
+    background-color: #fff;
+    .server-wrap {
+      .item {
+        .icon {
+          display: block;
+          width: 100%;
+          height: 50px;
+          background: #fff url('../../image/icon5.png') center 0px no-repeat;
+        }
+        &.item1 {
+          .icon {
+            background-position: center -270px;
+          }
+        }
+        &.item2 {
+          .icon {
+            background-position: center -223px;
+          }
+        }
+        &.item3 {
+          .icon {
+            background-position: center -317px;
+          }
+        }
+        &.item4 {
+          .icon {
+            background-position: center -177px;
+          }
+        }
+        &.item5 {
+          .icon {
+            background-position: center -362px;
+          }
+        }
+        &.item6 {
+          .icon {
+            background-position: center 15px;
+          }
+        }
+        &.item7 {
+          .icon {
+            background-position: center -32px;
+          }
+        }
+        &.item8 {
+          .icon {
+            background-position: center -127px;
+          }
+        }
+      }
+    }
+  }
+  .desc {
+    padding-bottom: 0;
+    .img {
+      margin-bottom: 10px;
+    }
+    .img:last-child {
+      margin-bottom: 0;
+    }
+  }
+  .commit {
+    position: relative;
+    padding-bottom: 0;
+    .btn-all {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      color: #999;
+      font-size: .875em;
+      &:focus {
+        color: $green;
+      }
+    }
+    .tag-list {
+      padding: 10px 15px;
+      .tag {
+        background-color: #eafbe6;
+        padding: 2px 10px;
+        display: inline-block;
+        border-radius: 5px;
+      }
+    }
+    .content-container {
+      .item {
+        padding: 10px 15px;
+        border-bottom: 1px solid #ccc;
+        .info {
+          line-height: 35px;
+        }
+        .date {
+          color: #999;
+        }
+        .star {
+          color: #999;
+          .icon {
+            vertical-align: middle;
+            display: inline-block;
+            width: 89px;
+            height: 25px;
+            background: #fff url(/distimages/icon-star.png) 0px 4px no-repeat;
+          }
+          .icon1 {
+            background-position: 9px 5px;
+          }
+          .icon2 {
+            background-position: 9px -14px;
+          }
+          .icon3 {
+            background-position: 9px -33px;
+          }
+          .icon4 {
+            background-position: 9px -52px;
+          }
+          .icon5 {
+            background-position: 9px -72px;
+          }
+        }
+        .avatar {
+          height: 35px;
+          width: 35px;
+          border-radius: 50%;
+          overflow: hidden;
+          text-align: center;
+          margin-right: 10px;
+        }
+        .detail {
+          margin: 0;
+        }
+      }
+    }
   }
 }
 
