--- a/src/view/forgetPassword.html
+++ b/src/view/forgetPassword.html
@@ -30,29 +30,20 @@
       </label>
     </div>
   </div>
-  <div class="modal fade bs-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal fade bs-modal-lg user-protocol" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">用户协议</h4>
       </div>
-      <div class="modal-body" style="max-height: 60vh;overflow-y: auto;">
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
-        <p>协议一</p>
+      <div class="modal-body" style="max-height: calc(100vh - 150px);overflow-y: auto;">
+        <p class="text-t"> 感谢您使用******的产品和服务（本文件中合称“服务”，不包括我们按另行书面条款向用户提供之任何服务）！</p>
+        <p class="strong">一、服务条款的确认与接纳</p>
+        <p  class="text"> 1.本平台站的服务所有权和运作权归***有限公司（下称“***”）所有。本网站的服务根据按照***发布的公司章程、服务条款和操作规则严格执行，本条款具有合同效力，效力范围及于我们的一切服务。</p>
+        <p  class="text">2 .注册用户时，请您仔细阅读本条款。如用户通过进入注册程序并勾选“我同意此服务条款”，即表示您与***已达成协议，除非违反国家强制性法律，否则始终有效，这其中包括蟠桃会对服务条款随时做的任何修改。</p>
+        <p class="strong">二、 用户的权利和义务</p>
+        <p  class="text">用户有权根据本条款的规定及本网站发布的相关规则，利用本网站发布会议信息、查询资讯信息、在本网站社区发帖、参加本网站的有关活动及有权享受本网站提供的其他的有关资讯及信息服务</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
