--- a/src/view/mycollection.html
+++ b/src/view/mycollection.html
@@ -5,23 +5,132 @@
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  <div class="my">
+  <div class="top top-wrap my-top">
+    <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
+    <h2 class="text-center">我的收藏</h2>
+  </div>
+  <div class="my my-collection">
     <div class="swiper-container swiper-my">
       <div class="swiper-wrapper">
+          <!-- 保姆 -->
           <div class="swiper-slide">
-            <a href="#">
-              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
-            </a>
+            <div class="recommend-aunts">
+              <div class="aunts-list">
+                <div class="item clearfix">
+                  <div class="clearfix">
+                    <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+                    <div class="content pull-left">
+                      <div class="info">
+                        <span class="name">李阿姨</span>
+                        <span class="star star1"></span>
+                        <span class="status">空挡</span>
+                        <span class="money">4000/月</span>
+                      </div>
+                      <div class="detail clearfix">
+                        <span>47岁</span>
+                        <span>舟山人</span>
+                        <span>高中</span>
+                        <span>1年经验</span>
+                      </div>
+                      <div class="boxes clearfix">
+                        <span class="small-box">1年经验</span>
+                        <span class="small-box">舟山人</span>
+                        <span class="small-box">高中</span>
+                      </div>
+                    </div>
+                  </div>
+                  <span class="text-center db cancle clearfix">
+                    <button class="btn btn-default">取消收藏</button>
+                  </span>
+                </div>
+                <div class="item clearfix">
+                  <div class="clearfix">
+                    <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+                    <div class="content pull-left">
+                      <div class="info">
+                        <span class="name">李阿姨</span>
+                        <span class="star star2"></span>
+                        <span class="status">空挡</span>
+                        <span class="money">4000/月</span>
+                      </div>
+                      <div class="detail clearfix">
+                        <span>47岁</span>
+                        <span>舟山人</span>
+                        <span>高中</span>
+                        <span>1年经验</span>
+                      </div>
+                      <div class="boxes clearfix">
+                        <span class="small-box">1年经验</span>
+                        <span class="small-box">舟山人</span>
+                        <span class="small-box">高中</span>
+                      </div>
+                    </div>
+                  </div>
+                  <span class="text-center db cancle clearfix">
+                    <button class="btn btn-default">取消收藏</button>
+                  </span>
+                </div>
+              </div>
+
+            </div>
           </div>
+          <!-- 服务 -->
           <div class="swiper-slide">
-            <a href="#">
-              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
-            </a>
+            <div class="server-list">
+              <div class="clearfix item">
+                <div class="detail clearfix">
+                  <div class="pull-left img">
+                    <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                  </div>
+                  <div class="info pull-left">
+                    <p class="name text-overflow">管道修理</p>
+                    <p class="star star1"></p>
+                    <p class="money">￥4000/月</p>
+                    <p class="phone">13312341234</p>
+                  </div>
+                </div>
+                <span class="text-center db cancle clearfix">
+                  <button class="btn btn-default">取消收藏</button>
+                </span>
+              </div>
+              <div class="clearfix item">
+                <div class="detail clearfix">
+                  <div class="pull-left img">
+                    <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                  </div>
+                  <div class="info pull-left">
+                    <p class="name text-overflow">管道修理</p>
+                    <p class="star star2"></p>
+                    <p class="money">￥4000/月</p>
+                    <p class="phone">13312341234</p>
+                  </div>
+                </div>
+                <span class="text-center db cancle clearfix">
+                  <button class="btn btn-default">取消收藏</button>
+                </span>
+              </div>
+            </div>
           </div>
+          <!-- 商家 -->
           <div class="swiper-slide">
-            <a href="#">
-              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
-            </a>
+            <div class="server-list">
+              <div class="clearfix item">
+                <div class="detail clearfix">
+                  <div class="pull-left img">
+                    <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                  </div>
+                  <div class="info pull-left">
+                    <p class="name text-overflow">管道修理</p>
+                    <p class="star star1"></p>
+                    <p class="phone">13312341234</p>
+                    <p class="address">定海</p>
+                  </div>
+                </div>
+                <span class="text-center db cancle clearfix">
+                  <button class="btn btn-default">取消收藏</button>
+                </span>
+              </div>
+            </div>
           </div>
       </div>
       <div class="swiper-pagination" id="pagination"></div>
@@ -37,13 +146,13 @@
         renderBullet: function (a, b) {
           switch (a) {
           case 0:
-              name = "洗";
+              name = "保姆";
               break;
           case 1:
-              name = "剪";
+              name = "服务";
               break;
           case 2:
-              name = "烫";
+              name = "商家";
               break;
           }
         return '<span class="' + b + '"><i>' + name + "</i></span>"
