--- a/src/view/mycomment.html
+++ b/src/view/mycomment.html
@@ -11,13 +11,42 @@
   </div>
   <div class="my my-comment">
     <div class="swiper-container swiper-my">
-      <div class="swiper-wrapper">
-          <div class="swiper-slide">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
+              <div class="server-list">
+                <div class="clearfix item">
+                  <div class="detail clearfix">
+                    <div class="pull-left img">
+                      <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                    </div>
+                    <div class="info pull-left">
+                      <p class="name text-overflow">李阿姨</p>
+                    </div>
+                  </div>
+                  <div class="cancle clearfix text-center">
+                    <button class="btn btn-default">评价</button>
+                  </div>
+                </div>
+                <div class="clearfix item">
+                  <div class="detail clearfix">
+                    <div class="pull-left img">
+                      <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                    </div>
+                    <div class="info pull-left">
+                      <p class="name text-overflow">李阿姨</p>
+                    </div>
+                  </div>
+                  <div class="cancle clearfix text-center">
+                    <button class="btn btn-default">评价</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             
-          </div>
-          <div class="swiper-slide">
-            
-          </div>
+        </div>
       </div>
       <div class="swiper-pagination" id="pagination"></div>
     </div>
