--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-28 16:25:08
+* @Last Modified time: 2017-11-28 17:01:41
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -1543,6 +1543,59 @@ a:hover, a:focus, a:active {
   }
 }
 
+// 我的地址
+.my-address {
+  .address-list {
+    .item {
+      & + .item {
+        margin-top: 10px;
+      }
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+      .detail {
+        font-size: 1.2em;
+        padding: 10px 15px;
+        .phone {
+          margin-left: 20px;
+        }
+        
+      }
+      .choose {
+        border-top: 1px solid #eee;
+        padding: 10px 15px;
+        a {
+          color: #333;
+          display: inline-block;
+          i {
+            margin-right: 5px;
+          }
+          &:focus {
+            color: $green;
+          }
+          & + a {
+            margin-left: 20px;
+          }
+        }
+        .address-radio {
+          color: #333;
+          i {
+            color: #333;
+          }
+          input {
+            display: -none;
+          }
+          &.address-radio-active {
+            color: $green;
+            i {
+              color: $green;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
 
 @media (max-width: 375px) {
