--- a/src/view/myaddress.html
+++ b/src/view/myaddress.html
@@ -22,9 +22,9 @@
         </div>
         <div class="choose clearfix">
           <div class="pull-left">
+            <input type="radio" name="address">
             <label class="address-radio">
-              <i class="fa fa-check-circle fa-circle-o "></i>
-              <input type="radio" name="address">
+              <i class="fa fa-circle-o "></i>
               默认地址
             </label>
           </div>
@@ -34,12 +34,37 @@
           </div>
         </div>
       </div>
-
+      <div class="item">
+        <div class="detail">
+          <p class="text">
+            <span>李阿姨</span>
+            <span class="phone">133333333333</span>
+          </p>
+          <p class="address">浙江浙江浙江浙江浙江浙江浙江浙江浙江浙江浙江浙江浙江</p>
+        </div>
+        <div class="choose clearfix">
+          <div class="pull-left">
+            <input type="radio" name="address" checked>
+            <label class="address-radio">
+              <i class="fa fa-circle-o "></i>
+              默认地址
+            </label>
+          </div>
+          <div class="pull-right">
+            <a href="#" class="edit"><i class="fa fa-edit"></i>编辑</a>
+            <a href="javascript:void(0);" class="del"><i class="fa fa-trash-o"></i>删除</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center add-btn-wrap">
+      <a href="#" class="btn btn-default green-btn btn-block">添加地址</a>
     </div>
   </div>
   <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer.html') %>
   <script>
+
   </script>
 </body>
 </html>
