--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-28 17:01:41
+* @Last Modified time: 2017-11-29 17:11:29
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -1577,13 +1577,13 @@ a:hover, a:focus, a:active {
             margin-left: 20px;
           }
         }
+        input[type="radio"] {
+          display: none;
+        }
         .address-radio {
           color: #333;
           i {
             color: #333;
-          }
-          input {
-            display: -none;
           }
           &.address-radio-active {
             color: $green;
@@ -1594,6 +1594,11 @@ a:hover, a:focus, a:active {
         }
       }
     }
+  }
+  .add-btn-wrap {
+    margin-top: 40px;
+    padding: 0 30px;
+    font-size: 1.2em;
   }
 }
 
