--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-29 17:22:22
+* @Last Modified time: 2017-11-29 19:32:49
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -76,6 +76,7 @@ a:hover, a:focus, a:active {
 .db {
   display: block;
 }
+
 
 
 .center-content {
@@ -1604,21 +1605,60 @@ a:hover, a:focus, a:active {
 // 编辑地址
 .my-edit-address {
   .my-edit-address-form {
-    padding: 10px 15px;
     background-color: #fff;
     font-size: 1.2em;
     input {
       outline: none;
-      border: -none;
+      // border: -none;
       margin-left: 10px;
     }
     textarea {
       margin-left: 10px;
     }
     .input-wrap {
-      padding: 10px 0;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+      .label-name {
+        width: 45px;
+        margin-top: 3px;
+        font-size: 1.1em;
+        color: #666;
+      }
+      .form-control {
+        width: calc(100% - 55px);
+        outline: none;
+        box-shadow: none;
+        border-color: transparent;
+        font-size: 1em;
+        margin-left: 0;
+      }
+      input:disabled {
+        background-color: #fff;
+      }
+      .choose {
+        position: absolute;
+        color: #999;
+        top: 20px;
+        right: 15px;
+        font-size: .875em;
+        display: block;
+        i {
+          margin-left: 5px;
+        }
+      }
     }
   }
+}
+
+
+
+
+.bg-grey {
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #ccc;
+}
+.rel {
+  position: relative;
 }
 
 @media (max-width: 375px) {
