--- a/src/view/myeditaddress.html
+++ b/src/view/myeditaddress.html
@@ -2,30 +2,32 @@
 <html lang="zh-CN">
 <head>
   <%= require('html-loader!./layout/html-common.html') %>
+  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  <div class="top top-wrap my-top">
+  <div class="top top-wrap my-top bg-grey">
     <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
     <h2 class="text-center">编辑地址</h2>
   </div>
   <div class="my my-edit-address">
     <form action="" id="my-edit-address-form" class="my-edit-address-form">
-      <div class="input-wrap">
-        <label for="">姓名</label>
-        <input type="text" id="name">
+      <div class="input-wrap clearfix">
+        <label for="name" class="pull-left label-name">姓名</label>
+        <input type="text" id="name" class="pull-left form-control" value="姓名">
       </div>
-      <div class="input-wrap">
-        <label for="">电话</label>
-        <input type="text" id="phone">
+      <div class="input-wrap clearfix">
+        <label for="phone" class="pull-left label-name">电话</label>
+        <input type="phone" id="phone" class="pull-left form-control" value="13111111111">
       </div>
-      <div class="input-wrap">
-        <label for="">地区</label>
-        <input type="text" class="area">
+      <div class="input-wrap clearfix rel">
+        <label for="area" class="pull-left label-name">地区</label>
+        <input type="text" id="area" class="pull-left form-control" disabled value="舟山 定海">
+        <span class="choose">请选择<i class="fa fa-angle-right"></i></span>
       </div>
-      <div class="input-wrap">
-        <label for="">地址</label>
-        <textarea name="" id="address" cols="30" rows="2"></textarea>
+      <div class="input-wrap clearfix">
+        <label for="address" class="pull-left label-name">地址</label>
+        <textarea name="address" id="address" cols="30" rows="2"  class="pull-left form-control">定海定海定海定海定海定海定海</textarea>
       </div>
     </form>
   </div>
